--- a/app/views/promocodes/new.html.erb
+++ b/app/views/promocodes/new.html.erb
@@ -2,7 +2,7 @@
   <div class="hotdeal_wrap">
 
     <h1>New Promocode</h1>
-    <%= render 'form' %>
+    <%= render 'new_form' %>
     <%= link_to 'Back', promocodes_path %>
   </div>
 </div>
