--- a/app/views/promocodes/_new_form.html.erb
+++ b/app/views/promocodes/_new_form.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="pricing stk clearfix">
       <%= f.input :p_spare_26, label: 'Current Price' %>
-      <%= f.input :p_spare_28, label: 'Original Price' %>
+      <%= f.input :p_spare_28, label: 'Ori Price(for HotDeal)' %>
       <%= f.input :p_spare_27, label: 'Discount Percentage' %>
       <%= f.input :p_spare_03, label: 'Average Rate' %>
       <%= f.input :p_spare_04, label: 'Number of Reviews' %>
